# RingUI

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.qrc
example/qml/: SingleTaskWindow.qml  StandardWindow.qml  main.qml
example/qml/Window/: MainWindow.qml  MainWindow02.qml  PageWindow.qml
example/qml/global/: ContentModel.qml  GlobalModel.qml  ItemsFooter.qml  ItemsOriginal.qml
example/qml/page/: T_Buttons.qml
example/src/: CircularReveal.h  main.cpp
src/: CMakeLists.txt  RingAccentColor.cpp  RingApp.cpp  RingApp.h  RingColor.cpp  RingColor.h  RingDef.h  RingFrameless.cpp  RingFrameless.h  RingIconDef.h  RingRectangle.cpp  RingRectangle.h  RingRegProperty.h  RingSingle.h  RingTextStyle.cpp  RingTextStyle.h  RingTheme.cpp  RingTheme.h  RingTools.cpp  RingTools.h  ringaccentcolor.h
src/QML/imports/Controls/: RingAcrylic.qml  RingAppBar.qml  RingBadge.qml  RingButton.qml  RingContentDialog.qml  RingControl.qml  RingControlBackground.qml  RingDivider.qml  RingEvent.qml  RingFilledButton.qml  RingFocusRectangle.qml  RingFrame.qml  RingIcon.qml  RingIconButton.qml  RingImageButton.qml  RingInfoBar.qml  RingLoader.qml  RingMenu.qml  RingMenuBar.qml  RingMenuBarItem.qml  RingMenuItem.qml  RingMenuSeparator.qml  RingNavigationView.qml  RingObject.qml  RingPage.qml  RingPaneItem.qml  RingPaneItemEmpty.qml  RingPaneItemExpander.qml  RingPaneItemHeader.qml  RingPaneItemSeparator.qml  RingPopup.qml  RingProgressRing.qml  RingRouter.qml  RingScrollBar.qml  RingScrollablePage.qml  RingShadow.qml  RingText.qml  RingTextButton.qml  RingToggleSwitch.qml  RingTooltip.qml  (+2 more)
